<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line_bg"
        android:layout_alignParentBottom="true" >

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >
			<RadioButton
                android:id="@+id/rb_ch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="true"
                android:text="@string/orc_lan_zh" />
            <RadioButton
                android:id="@+id/rb_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/orc_lan_eng" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_margin="2dp"
            android:text="@string/choose_from_camara" />

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:layout_toLeftOf="@id/btn_camera"
            android:text="@string/choose_from_picturewall" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottombar"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
			<TextView
                android:id="@+id/tv_result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ocr_result_title"
                android:layout_marginTop="10dp"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/result"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ocr_result_hint"
                android:textSize="15sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:text="@string/the_choose_pic" />
			<ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/holo_blue_light" />
            <ImageView
                android:id="@+id/iv_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:maxHeight="300dp" />
        </LinearLayout>
    </ScrollView>
	<include layout="@layout/decode_loading"/>
</RelativeLayout>